<resources>
    <string name="app_name">AdoptPet</string>
    <string name="facebook_app_id">218650119517858</string>
    <string name="fb_login_protocol_scheme">fb218650119517858</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="age">Age (years)</string>
    <string name="contact_number">Contact number</string>
    <string name="contact_name">Contact name</string>
    <string name="free_text">Description</string>
    <string name="add_db">Add to database</string>
    <string name="apply">Apply filters</string>
    <string name="pet_kind">Pet Kind</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Pet name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="my_pets">My pets</string>
    <string name="add_pet">Add pet</string>
    <string name="home">Home</string>


    <string-array name="cities_array">
            <item>"Acre"</item>
            <item>"Afula"</item>
            <item>"Arad"</item>
            <item>"Ariel"</item>
            <item>"Ashdod"</item>
            <item>"Ashkelon"</item>
            <item>"Bat Yam"</item>
            <item>"Beersheba"</item>
            <item>"Beit Shean"</item>
            <item>"Beit Shemesh"</item>
            <item>"Beitar Illit"</item>
            <item>"Bnei Brak"</item>
            <item>"Dimona"</item>
            <item>"Eilat"</item>
            <item>"Elad"</item>
            <item>"Givat Shmuel"</item>
            <item>"Givatayim"</item>
            <item>"Hadera"</item>
            <item>"Haifa"</item>
            <item>"Herzliya"</item>
            <item>"Hod HaSharon"</item>
            <item>"Holon"</item>
            <item>"Jerusalem"</item>
            <item>"Karmiel"</item>
            <item>"Kiryat Ata"</item>
            <item>"Kiryat Bialik"</item>
            <item>"Kiryat Gat"</item>
            <item>"Kiryat Malakhi"</item>
            <item>"Kiryat Motzkin"</item>
            <item>"Kiryat Ono"</item>
            <item>"Kiryat Shmona"</item>
            <item>"Kiryat Yam"</item>
            <item>"Kfar Saba"</item>
            <item>"Lod"</item>
            <item>"Maale Adumim"</item>
            <item>"Maalot-Tarshiha"</item>
            <item>"Migdal HaEmek"</item>
            <item>"Modiin-Maccabim-Reut"</item>
            <item>"Modiin Illit"</item>
            <item>"Nahariya"</item>
            <item>"Nazareth Illit"</item>
            <item>"Nesher"</item>
            <item>"Ness Ziona"</item>
            <item>"Netanya"</item>
            <item>"Netivot"</item>
            <item>"Ofakim"</item>
            <item>"Or Akiva"</item>
            <item>"Or Yehuda"</item>
            <item>"Petah Tikva"</item>
            <item>"Raanana"</item>
            <item>"Ramat Gan"</item>
            <item>"Ramat HaSharon"</item>
            <item>"Ramla"</item>
            <item>"Rehovot"</item>
            <item>"Rishon LeZion"</item>
            <item>"Rosh HaAyin"</item>
            <item>"Safed"</item>
            <item>"Sderot"</item>
            <item>"Tel Aviv-Yaffo"</item>
            <item>"Tiberias"</item>
            <item>"Tirat Carmel"</item>
            <item>"Yavne"</item>
            <item>"Yehud-Monosson"</item>
            <item>"Yokneam"</item>
    </string-array>

</resources>
