<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:rsb="http://schemas.android.com/apk/lib/com.google.rsb"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPetActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/kind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/pet_kind"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textColorHint="@android:color/white" />

        <RadioGroup
            android:id="@+id/pet_kind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view_below"
            android:layout_marginVertical="4sp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="Dog" />

            <RadioButton
                android:id="@+id/cat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cat" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_light"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/gender"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <RadioGroup
            android:id="@+id/pet_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view_below"
            android:layout_marginVertical="4sp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="Male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Female" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/age"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
            android:id="@+id/rangeSeekbar5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:corner_radius="10"
            app:min_value="0"
            app:max_value="30"
            app:steps="1"
            app:bar_color="#F7BB88"
            app:bar_highlight_color="#E07416"
            app:data_type="_integer"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_light"/>

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/location"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/run_filter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/apply"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent" />




    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>