<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/grad_bg"
    tools:context=".LoginActivity"
    android:animateLayoutChanges="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp">


        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@id/imgView_logo">
            
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="30sp"/>

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/tv_login"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textAllCaps="true"
                        android:fontFamily="sans-serif-light"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:textSize="15sp"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="password"
                        android:textAllCaps="true"
                        android:fontFamily="sans-serif-light"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:focusableInTouchMode="true"
                        android:fontFamily="sans-serif-light"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        tools:ignore="InvalidImeActionId" />


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/line1"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/btn_bg"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:textSize="16sp"/>

        </RelativeLayout>

    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rellay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:fontFamily="sans-serif"
                android:text="@string/common_signin_button_text"
                android:textAllCaps="true"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/transparent"
                android:fontFamily="sans-serif"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="true"
                android:textColor="@color/white"/>
        </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</RelativeLayout>